# koyote

./: .gitignore  Cargo.toml
examples/: simple.rs
res/shaders/: simple.hlsl
src/: core.rs  graphics.rs  input.rs  lib.rs  log.rs  prelude.rs
src/core/: error.rs  event.rs  flow.rs  framework.rs  runnable.rs  time.rs
src/graphics/: buffer.rs  context.rs  debug.rs  image.rs  pipeline.rs  shader.rs  swapchain.rs  window.rs
src/graphics/shader/: builder.rs  lang.rs  stage.rs
src/input/: button.rs  key.rs  modifier.rs  mouse.rs
src/old/: core_window.rs  window.rs
