[package]
name = "koyote"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Lugo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.ash]
version = "0.37.3"
features = ["linked"]

[dependencies]
ash-window = "0.12.0"
winit = "0.28.6"
raw-window-handle = "0.5.2"
shaderc = "0.8.2"

bevy_ecs = "0.10.1"

## logging and errors ##
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
# tracing-unwrap     = "0.10.0"
thiserror = "1.0.39"
anyhow = "1.0.71"

## data ##
bytemuck = { version = "1.13.1", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
enumflags2 = "0.7.7"
uuid = "1.4.0"

[[example]]
name = "simple"